tests/paczka1/fuzzy1/31567922.err
Error in line 9: lBEiCk5l S820 34,2
Error in line 15: S820 A73 78,9
Error in line 4: 6HPy A704 15,8
Error in line 23: fYos A73 94,9
Error in line 36: 6HPy S182 85,29
Error in line 32: fr6 S182 17,4
Error in line 34: S820 A704 55,1
Error in line 35: 6HPy A704 12,9
